2021-03-12  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_pgp_gakp): Fix patch mistake.

2021-02-26  NIIBE Yutaka  <gniibe@fsij.org>

	* src/configure (kdf_do_required): Fix typo.

	* chopstx: Update to 2.2.

2021-02-25  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.17.

2021-02-22  NIIBE Yutaka  <gniibe@fsij.org>

	* src/config.h.in (@KDF_DO_REQUIRED_DEFINE@): New.

	* src/configure (KDF_DO_REQUIRED_DEFINE): New for GNU/Linux.

	* src/openpgp-do.c (gpg_do_kdf_check): When LEN==0, check if
	KDO data object is available.
	[KDF_DO_REQUIRED] (proc_key_import): Refuse the key import when
	KDF data object is not available.

	* src/openpgp.c [KDF_DO_REQUIRED] (cmd_pgp_gakp): Refuse key
	generation when KDF data object is not available.

2021-02-19  NIIBE Yutaka  <gniibe@fsij.org>

	* tool/gnuk-emulation-setup: Remove.

	* tool/upgrade_by_passwd.py (main): Use tobytes.
	* tool/gnuk_get_random.py: Likewise.
	* tool/gnuk_remove_keys_libusb.py (main): Likewise.
	Switch to Python3.
	* tool/gnuk_put_binary_libusb.py (main): Use tobytes.
	Switch to Python3.
	* tool/gnuk_upgrade.py (main): Use tobytes.
	Switch to Python3.

	* chopstx: Update to 1.19.

2021-02-18  Vincent Pelletier <plr.vincent@gmail.com>

	* test/features/202_setup_passphrase.feature: Fix.
	* test/rsa_keys.py: Fix escape.
	* tests/card_reader.py: Extend the timeout.
	Handle no card.
	* tests/rsa_keys.py: Fix escape.
	* tool/gnuk_token.py: Avoid hard-coding the endpoints.
	Longer timeout.

2021-02-18  NIIBE Yutaka  <gniibe@fsij.org>

	* src/configure [GNU_LINUX_EMULATION] (def_mhz): Define.
	(output_vendor_product_serial_strings): Output ARCH.

	* GNUK_USB_DEVICE_ID: Use "Gnuk Token" for emulation, too.

	* src/main.c [GNU_LINUX_EMULATION] (main): Add initialization of
	the .gnuk-flash-image file.
	(gnuk_sbrk): Rename from sbrk.

2020-09-10  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.16.

2020-09-09  NIIBE Yutaka  <gniibe@fsij.org>
